[package]
name = "rlox"
version = "0.1.0"
authors = ["Josh Chase <josh@jec.pw>"]
edition = "2018"

[dependencies]
display_derive = "0.0.0"
failure = "0.1.2"
lazy_static = "1.1.0"
tendril = "0.4.0"
either = "1.5.0"

[[bin]]
name = "rlox"
path = "src/bin/rlox.rs"

[lib]
name = "rlox"
path = "src/lib/lib.rs"
